# lib/db/src/schema/index.ts
@@ -3,3 +3,4 @@ export * from "./events";
 export * from "./listings";
 export * from "./contacts";
 export * from "./bot";
+export * from "./whatsapp";
